@@ -1,6 +1,9 @@
-package me.prettyprint.cassandra.service;
+package me.prettyprint.hector.api;
 
 import static org.junit.Assert.fail;
+
+import me.prettyprint.hector.api.ClockResolution;
+import me.prettyprint.hector.api.factory.HFactory;
 
 import org.junit.Test;
 import org.slf4j.Logger;
@@ -21,9 +24,10 @@ public class ClockResolutionTest {
    */
   @Test
   public void testMicrosecondsSync() throws Exception {
-    long previous = ClockResolution.MICROSECONDS_SYNC.createClock();
+    ClockResolution clockResolution = HFactory.createClockResolution(ClockResolution.MICROSECONDS_SYNC);
+    long previous = clockResolution.createClock();
     for (int i = 0; i < 50; i++) {
-      long current = ClockResolution.MICROSECONDS_SYNC.createClock();
+      long current = clockResolution.createClock();
       log.debug("previous=" + previous + " - current=" + current);
       if (current == previous) {
         fail("Two calls to clock generated the same timestamp. (previous=" + previous
